Creating layout of individual tiles and the list of tiles

--- a/force-app/main/default/classes/CarController.cls
+++ b/force-app/main/default/classes/CarController.cls
@@ -1,6 +1,6 @@
 public with sharing class CarController {
     @AuraEnabled(Cacheable=true)
     public static List<Car__c> getCars(){
-        return [SELECT Id, Name, Description__c, Category__c, Picture_URL__c FROM Car__c];
+        return [SELECT Id, Name, Description__c, Category__c, Picture_URL__c , MSRP__c FROM Car__c];
     }
 }
