logic for fetching and displaying similar cars in a record page

--- a/force-app/main/default/classes/CarController.cls
+++ b/force-app/main/default/classes/CarController.cls
@@ -41,4 +41,8 @@ public with sharing class CarController {
         String query = 'SELECT Id, Name, Description__c, Category__c, Picture_URL__c , MSRP__c FROM Car__c ' + whereClause + ' WITH SECURITY_ENFORCED ORDER BY NAME';
         return Database.query(query);
     }
+    @AuraEnabled(Cacheable=true)
+    public static Car__c[] getSimilarCars(Id carId, String[] makeType){
+        return [SELECT Id, Name, MSRP__c , Description__c, Category__c, Picture_URL__c FROM Car__c WHERE Make__c IN :makeType AND Id != :carId];
+    }
 }
